--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "react-redux": "^4.0.6",
     "react-router": "^2.0.0-rc5",
     "redux": "^3.1.4",
+    "request": "^2.74.0",
     "semantic-ui": "^2.1.8"
   }
 }
